all genes expressed in less than 1% of the samples are deleted

--- a/data.ipynb
+++ b/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
        "[2544 rows x 23465 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +748,7 @@
        "[2544 rows x 23459 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -766,7 +766,424 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>1/2-SBSRNA4</th>\n",
+       "      <th>A1BG</th>\n",
+       "      <th>A1BG-AS1</th>\n",
+       "      <th>A1CF</th>\n",
+       "      <th>A2LD1</th>\n",
+       "      <th>A2M</th>\n",
+       "      <th>A2ML1</th>\n",
+       "      <th>A2MP1</th>\n",
+       "      <th>A4GALT</th>\n",
+       "      <th>A4GNT</th>\n",
+       "      <th>...</th>\n",
+       "      <th>ZWILCH</th>\n",
+       "      <th>ZWINT</th>\n",
+       "      <th>ZXDA</th>\n",
+       "      <th>ZXDB</th>\n",
+       "      <th>ZXDC</th>\n",
+       "      <th>ZYG11A</th>\n",
+       "      <th>ZYG11B</th>\n",
+       "      <th>ZYX</th>\n",
+       "      <th>ZZEF1</th>\n",
+       "      <th>ZZZ3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>GSM2171880</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>651.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GSM2171881</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>320.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>152.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GSM2171882</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GSM2171883</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>14.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GSM2171884</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>578.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GSM2174421</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1253.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GSM2174422</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>73.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GSM2174423</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2724.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GSM2174424</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>178.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GSM2174425</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2544 rows × 23459 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            1/2-SBSRNA4  A1BG  A1BG-AS1  A1CF  A2LD1     A2M  A2ML1  A2MP1  \\\n",
+       "GSM2171880          NaN   NaN       NaN   NaN    NaN     NaN    NaN    NaN   \n",
+       "GSM2171881          NaN   NaN       NaN   NaN    NaN     NaN    NaN    NaN   \n",
+       "GSM2171882          NaN   NaN       NaN   1.0    NaN     NaN    NaN    NaN   \n",
+       "GSM2171883          NaN   NaN       NaN   2.0    NaN     NaN    NaN    NaN   \n",
+       "GSM2171884          NaN   NaN       NaN   NaN    NaN     NaN    NaN    NaN   \n",
+       "...                 ...   ...       ...   ...    ...     ...    ...    ...   \n",
+       "GSM2174421          NaN   NaN       NaN   NaN    NaN  1253.0    NaN    NaN   \n",
+       "GSM2174422          NaN   NaN       NaN   NaN    NaN     NaN    NaN    NaN   \n",
+       "GSM2174423          NaN   NaN       NaN   NaN    NaN  2724.0    NaN    NaN   \n",
+       "GSM2174424          NaN   NaN       NaN  83.0    NaN     NaN    NaN    NaN   \n",
+       "GSM2174425          NaN   NaN       NaN   NaN    NaN     NaN    NaN    NaN   \n",
+       "\n",
+       "            A4GALT  A4GNT  ...  ZWILCH  ZWINT  ZXDA  ZXDB   ZXDC  ZYG11A  \\\n",
+       "GSM2171880     NaN    NaN  ...     NaN    NaN   NaN   NaN    NaN     NaN   \n",
+       "GSM2171881     NaN    NaN  ...     NaN    NaN   NaN   NaN    NaN     NaN   \n",
+       "GSM2171882     NaN    NaN  ...     4.0    NaN   NaN   NaN    NaN     NaN   \n",
+       "GSM2171883     NaN    NaN  ...    42.0    NaN   NaN   NaN    NaN     NaN   \n",
+       "GSM2171884     NaN    NaN  ...     NaN    NaN   NaN   NaN    NaN     NaN   \n",
+       "...            ...    ...  ...     ...    ...   ...   ...    ...     ...   \n",
+       "GSM2174421     NaN    NaN  ...     NaN    NaN   NaN   NaN   12.0     NaN   \n",
+       "GSM2174422     NaN    NaN  ...     NaN    NaN   NaN   2.0    NaN     NaN   \n",
+       "GSM2174423     NaN    NaN  ...     NaN    NaN   NaN   NaN    NaN     NaN   \n",
+       "GSM2174424     NaN    NaN  ...     NaN    NaN   NaN   NaN  178.0     NaN   \n",
+       "GSM2174425     NaN    NaN  ...     NaN    NaN   NaN   NaN    NaN     NaN   \n",
+       "\n",
+       "            ZYG11B   ZYX  ZZEF1   ZZZ3  \n",
+       "GSM2171880     NaN   NaN    NaN  651.0  \n",
+       "GSM2171881   320.0   2.0    NaN  152.0  \n",
+       "GSM2171882     NaN   NaN    NaN    NaN  \n",
+       "GSM2171883     NaN   3.0   66.0   14.0  \n",
+       "GSM2171884   578.0   NaN    NaN    NaN  \n",
+       "...            ...   ...    ...    ...  \n",
+       "GSM2174421     NaN   NaN    NaN    NaN  \n",
+       "GSM2174422    73.0   NaN    NaN    NaN  \n",
+       "GSM2174423     NaN  29.0    NaN    NaN  \n",
+       "GSM2174424     NaN   6.0   49.0    NaN  \n",
+       "GSM2174425     NaN   NaN    NaN    NaN  \n",
+       "\n",
+       "[2544 rows x 23459 columns]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#test\n",
+    "import numpy as np\n",
+    "testdf = df.replace(0, np.nan)\n",
+    "testdf\n",
+    "sum = testdf['1/2-SBSRNA4'].isna().sum()\n",
+    "if sum >= 500:\n",
+    "    print(\"drop\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[39], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m sparsedf \u001b[39m=\u001b[39m df\u001b[39m.\u001b[39mreplace(\u001b[39m0\u001b[39m, np\u001b[39m.\u001b[39mnan)\n\u001b[0;32m      5\u001b[0m \u001b[39mfor\u001b[39;00m column_name \u001b[39min\u001b[39;00m df\u001b[39m.\u001b[39mcolumns:\n\u001b[1;32m----> 6\u001b[0m     column \u001b[39m=\u001b[39m sparsedf[column_name]\n\u001b[0;32m      7\u001b[0m     count \u001b[39m=\u001b[39m column\u001b[39m.\u001b[39misna()\u001b[39m.\u001b[39msum()\n\u001b[0;32m      8\u001b[0m     \u001b[39mif\u001b[39;00m count \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m \u001b[39m25\u001b[39m:\n",
+      "File \u001b[1;32mc:\\Users\\Jumii\\Documents\\M.Sc.Biophysics\\3.Semester\\Systems_Biology\\psupertime_project_self\\env\\lib\\site-packages\\pandas\\core\\frame.py:3758\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3755\u001b[0m     \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns)):\n\u001b[0;32m   3756\u001b[0m         \u001b[39myield\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_get_column_array(i)\n\u001b[1;32m-> 3758\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__getitem__\u001b[39m(\u001b[39mself\u001b[39m, key):\n\u001b[0;32m   3759\u001b[0m     check_deprecated_indexers(key)\n\u001b[0;32m   3760\u001b[0m     key \u001b[39m=\u001b[39m lib\u001b[39m.\u001b[39mitem_from_zerodim(key)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "#genes expressed in less than 1% of the sample are deleted\n",
+    "sparsedf = df.replace(0, np.nan)\n",
+    "for column_name in df.columns:\n",
+    "    column = sparsedf[column_name]\n",
+    "    count = column.isna().sum()\n",
+    "    if count >= 25:\n",
+    "        sparsedf.drop(column_name, axis = 1)\n",
+    "sparsedf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logdf = sparsedf.replace(np.nan, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1126,15 +1543,14 @@
        "[2544 rows x 23459 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#pseudocounts and log transform\n",
-    "import numpy as np\n",
-    "\n",
+    "#pseudocounts of 1 are added 0's to do log transformation\n",
+    "#logdf = sparsedf.replace(np.nan, 0)\n",
     "logdf = df.apply(lambda x: x.apply(lambda y: y if y != 0 else 1))\n",
     "logdf = np.log10(logdf)\n",
     "\n",
@@ -1145,7 +1561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1518,19 +1934,27 @@
        "[2544 rows x 593 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# calculate variance of each column, remove every gene below a variance threshold (insert NaN), create new data frame with remaining genes (400-500)\n",
-    "import numpy as np\n",
     "threshold = 0.55e-07\n",
     "\n",
     "highvargenes = logdf.apply(lambda x: x if x.var() >= threshold else [np.NaN]*len(x), axis = 0)\n",
     "highvargenes.dropna(axis=1, inplace = True)\n",
-    "highvargenes\n"
+    "highvargenes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "highvargenes.to_csv(\"variable_genes.csv\", sep = \",\", index = True)"
    ]
   }
  ],
@@ -1555,7 +1979,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "4889cdbf67da33bfd0a8e03b679cd9fd5c49192c2374e207b753b1b02ce19612"
+    "hash": "c609784df8cae68a2caf3ecfc889a9f786bb7d30d4b7c566bad2693a401d88e9"
    }
   }
  },
