--- a/raw_data.ipynb
+++ b/raw_data.ipynb
@@ -305,7 +305,7 @@
     }
    ],
    "source": [
-    "#new dataframe containing only the \"Age\" column (age matrix)\n",
+    "#change the \"Title\" column to an age column to extract the ages\n",
     "df[\"Age\"] = df[\"Title\"].apply(lambda x: x.split(\"yr\")[0])\n",
     "df[\"Age\"] = df[\"Age\"].astype(int)\n",
     "df"
